--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@ body, html {
   }
 
   .logo {
-    background-image: url('../img/logo.png');
+    background-image: url('/img/logo.png');
     width: 50px;
     height: 50px;
     background-repeat: no-repeat;
