--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,7 @@ body, html {
   }
 
   nav{
+    font-family: 'Source Sans Pro', sans-serif;
     background-color: #861F41;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -32,7 +33,7 @@ body, html {
       li{
         a{
           text-decoration: none;
-          color: black;
+          color: white;
         }
         // margin-left: 10px;
         padding: 10px;
@@ -43,10 +44,10 @@ body, html {
         // display: block;
       }
       li:hover{
-        color: white;
-        background-color: #5A5A5A;
+        color: #861F41;
+        background-color: white;
         a{
-          color: white;
+          color: #861F41;
         }
       }
     }
