--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,10 @@ body, html {
       display: flex;
       flex-direction: row;
       justify-content: center;
+      .searcher{
+        position: absolute;
+        left: 37%;
+      }
       li{
         a{
           text-decoration: none;
